k8s-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: abuzhor-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test-nginx
